--- a/bin/templates/project/app/build.gradle
+++ b/bin/templates/project/app/build.gradle
@@ -86,8 +86,8 @@ task genResources() {
 		def buf = new StringBuffer();
 		buf.append("//start - body\n");
 
-		def paths = [ "${project.rootDir}/src/main/resources/www/layout", "${project.rootDir}/src/main/resources/font" ];
-		def prefix = [ "www/layout/", "font/" ];
+		def paths = [ "${project.rootDir}/src/main/resources/www/layout", "${project.rootDir}/src/main/resources/font", "${project.rootDir}/src/main/resources/res/xml" ];
+		def prefix = [ "www/layout/", "font/", "res/xml/" ];
 		def i = 0;
 		for (String path : paths) {
 			def f = new java.io.File(path);
